<resources>
    <string name="app_name">Wheel</string>
    <string name="title_add_post">Add Post</string>
    <string name="action_settings">Settings</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="title_home">Wheel</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>

    <string name="generic_error_msg">Something went wrong…</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="pref_title_map_style">Map style</string>
    <string name="pref_map_style_normal">Normal</string>
    <string name="pref_map_style_satellite">Satellite</string>
    <string name="pref_map_style_hybrid">Hybrid</string>
    <string name="pref_map_style_terrain">Terrain</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="dialog_title_map_type">Map type</string>

    <!--About-->
    <string name="title_about">About</string>
    <string name="app_description">Wheel is a simple social network built with Firebase Firestore</string>
    <string name="app_version">Version 0.1</string>
    <string name="send_feedback">Send feedback</string>
    <string name="developer_email">indrit.bashkimi@gmail.com</string>
    <string name="feedback_subject">Feedback</string>
    <string name="feedback_chooser_title">Send email…</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>

    <!-- Posts -->
    <string name="action_delete">Delete</string>
    <string name="write_comment">Add comment…</string>
    <string name="comment_options">Comment options</string>
    <string name="like_comment">Like comment</string>
    <string name="copy_comment_text">Copy comment text</string>
    <string name="report_comment">Report comment</string>
    <string name="action_location">Add location</string>
    <string name="action_add_image">Add image</string>
    <string name="action_camera">Open camera</string>
    <string name="new_post_hint">Write something…</string>
    <string name="posts">Posts</string>
    <string name="action_save_post">Post</string>

    <!-- Profile -->
    <string name="enter_name_hint">Enter name</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="no_name">(No name)</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit</string>
    <string name="following">Following</string>

    <!-- Notifications -->
    <string name="show_all_notifications">Show all notifications</string>
    <string name="follow">Follow</string>
    <string name="search_title">Search</string>
    <string name="request_accepted">Accepted</string>
    <string name="following_pending">Pending</string>
    <string name="accept_request">Accept</string>
    <string name="follow_request">Follow request</string>
    <string name="follow_request_accepted">Follow request accepted</string>

    <!-- Messaging -->
    <string name="title_messages">Messages</string>
    <string name="no_messages">Your private messages with your friends and stalkers</string>
    <string name="pick_contact">Pick contact</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="action_clear_messages">Clear chat</string>
    <string name="delete_message">Delete message?</string>
    <string name="action_delete_chat">Delete chat</string>
    <string name="send_message">Send message</string>
</resources>
