<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/posts"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>
