<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/posts">

    <fragment
        android:id="@+id/posts"
        android:name="com.ibashkimi.wheel.posts.PostsFragment"
        android:label="@string/app_name" />
    <fragment
        android:id="@+id/messages"
        android:name="com.ibashkimi.wheel.messaging.chatlist.ChatListFragment"
        android:label="@string/title_messages">
        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/notifications"
        android:name="com.ibashkimi.wheel.notifications.NotificationsFragment"
        android:label="@string/title_notifications">
        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/profile"
        android:name="com.ibashkimi.wheel.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/search"
        android:name="com.ibashkimi.wheel.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search" />

</navigation>