<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loadingFragment">

    <fragment
        android:id="@+id/home"
        android:name="com.ibashkimi.wheel.home.HomeFragment"
        android:label="HomeFragment">
        <action
            android:id="@+id/action_home_to_about"
            app:destination="@id/about"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@+id/settings"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/home" />
        <action
            android:id="@+id/action_home_to_chat"
            app:destination="@id/chat"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_home_to_contact_picker"
            app:destination="@id/contactPicker"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_home_to_addPost"
            app:destination="@id/addPost"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_home_to_postDetails"
            app:destination="@id/postDetail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_home_to_editProfile"
            app:destination="@id/editProfile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/loadingFragment"
        android:name="com.ibashkimi.wheel.LoadingFragment"
        android:label="LoadingFragment">
        <action
            android:id="@+id/action_loading_to_home"
            app:destination="@id/home"
            app:launchSingleTop="true"
            app:popUpTo="@id/loadingFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loading_to_signIn"
            app:destination="@id/signIn"
            app:launchSingleTop="true"
            app:popUpTo="@id/loadingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/settings"
        android:name="com.ibashkimi.wheel.settings.SettingsFragment"
        android:label="activity_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/about"
        android:name="com.ibashkimi.wheel.about.AboutFragment"
        android:label="activity_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/contactPicker"
        android:name="com.ibashkimi.wheel.messaging.chatlist.ContactPickerFragment"
        android:label="@string/pick_contact">
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="false" />
        <action
            android:id="@+id/action_contactPicker_to_chat"
            app:destination="@+id/chat"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/home"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/chat"
        android:name="com.ibashkimi.wheel.messaging.chat.ChatFragment"
        android:label="@null">
        <argument
            android:name="chatId"
            app:argType="string"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/signIn"
        android:name="com.ibashkimi.wheel.SignInFragment"
        android:label="activity_sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signIn_to_home"
            app:destination="@id/home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/signIn"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addPost"
        android:name="com.ibashkimi.wheel.addpost.AddPostFragment"
        android:label="@string/title_add_post"
        tools:layout="@layout/fragment_add_post" />
    <fragment
        android:id="@+id/postDetail"
        android:name="com.ibashkimi.wheel.postdetail.PostDetailFragment"
        android:label="@string/title_post_detail"
        tools:layout="@layout/fragment_post_detail">
        <argument
            android:name="postId"
            app:argType="string"
            app:nullable="false" />
        <action
            android:id="@+id/action_post_to_map"
            app:destination="@id/post_map"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_post_to_profile"
            app:destination="@id/profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/post_map"
        android:name="com.ibashkimi.wheel.postdetail.PostMapFragment">
        <argument
            android:name="latitude"
            app:argType="string"
            app:nullable="false" />
        <argument
            android:name="longitude"
            app:argType="string"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/profile"
        android:name="com.ibashkimi.wheel.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/editProfile"
        android:name="com.ibashkimi.wheel.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile">
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="false" />
    </fragment>
</navigation>